--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 haloooooooo! ini web pertama lia!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>To My Dear, Historia</h1>
+<p>Love, Jaemin.</p>
+
+</body>
+</html>
