--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ haloooooooo! ini web pertama lia!
 <body>
 
 <h1>To My Dear, Historia</h1>
-<p>Love, Jaemin.</p>
+<p>Love, My Jaemin.</p>
 
 </body>
 </html>
+<p>I made a message for you in this link</p>
+<a href='/home.htm'>https://sendthesong.xyz/browse!</a>
+
+<img src="img_cat.jpg" width="500" height="600"
+  <p style="color:lilac;">With Love, Lia.</p>
