--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ haloooooooo! ini web pertama lia!
 </body>
 </html>
 <p>I made a message for you in this link</p>
-<a href='/home.htm'>https://sendthesong.xyz/browse!</a>
+<a href='/home.htm'>https://sendthesong.xyz/browse</a>
 
 <img src="img_cat.jpg" width="500" height="600"
   <p style="color:lilac;">With Love, Lia.</p>
