--- a/quis01.html
+++ b/quis01.html
@@ -18,7 +18,7 @@
     }
 
     .header {
-      background-color: #b30000;
+      background-color: #8A2BE2;
       padding: 20px;
       text-align: center;
       font-size: 24px;
@@ -26,7 +26,7 @@
     }
 
     .menu {
-      background-color: #ff8000;
+      background-color: #9370DB;
       padding: 15px;
       text-align: center;
       font-weight: bold;
@@ -37,7 +37,7 @@
     }
 
     .sidebar {
-      background-color: #cc6666;
+      background-color: #9932CC;
       padding: 20px;
       width: 20%;
       text-align: center;
@@ -45,7 +45,7 @@
     }
 
     .content {
-      background-color: #ff9900;
+      background-color: #9370DB;
       padding: 20px;
       width: 60%;
       text-align: center;
@@ -53,7 +53,7 @@
     }
 
     .footer {
-      background-color: #b30000;
+      background-color: #8A2BE2;
       padding: 15px;
       text-align: center;
       font-weight: bold;
