--- a/quis01.html
+++ b/quis01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layout Web</title>
+  <title>Layout Ungu Lilac</title>
   <style>
     * {
       box-sizing: border-box;
@@ -13,13 +13,23 @@
     }
 
     body {
-      background-color: lilac;
-      color: white;
+      background-color: #F2F2F2;
       padding: 20px;
+    }
+
+    .header,
+    .menu,
+    .sidebar,
+    .content,
+    .footer {
+      border-radius: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     .header {
       background-color: #8A2BE2;
+      color: white;
       padding: 20px;
       text-align: center;
       font-size: 24px;
@@ -27,7 +37,8 @@
     }
 
     .menu {
-      background-color: #9370DB;
+      background-color: #C8A2C8;
+      color: white;
       padding: 15px;
       text-align: center;
       font-weight: bold;
@@ -35,10 +46,13 @@
 
     .main {
       display: flex;
+      gap: 15px;
+      margin-bottom: 15px;
     }
 
     .sidebar {
-      background-color: #9932CC;
+      background-color: #E6D6F3;
+      color: #4B0082;
       padding: 20px;
       width: 20%;
       text-align: center;
@@ -46,7 +60,8 @@
     }
 
     .content {
-      background-color: #9370DB;
+      background-color: #FFFFFF;
+      color: #4B0082;
       padding: 20px;
       width: 60%;
       text-align: center;
@@ -54,10 +69,21 @@
     }
 
     .footer {
-      background-color: #8A2BE2;
+      background-color: #6A0DAD;
+      color: white;
       padding: 15px;
       text-align: center;
       font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
+      .main {
+        flex-direction: column;
+      }
+
+      .sidebar, .content {
+        width: 100%;
+      }
     }
   </style>
 </head>
