--- a/quis01.html
+++ b/quis01.html
@@ -28,7 +28,7 @@
     }
 
     .header {
-      background-color: #8A2BE2;
+      background-color: #b27ee2;
       color: white;
       padding: 20px;
       text-align: center;
@@ -69,7 +69,7 @@
     }
 
     .footer {
-      background-color: #6A0DAD;
+      background-color: #b590cf;
       color: white;
       padding: 15px;
       text-align: center;
