--- a/floryn.html
+++ b/floryn.html
@@ -9,14 +9,14 @@
 <body>
     <h1>STRUKTUR HTML & CSS</h1>
     <header>
-        <h1>Header</h1>
+        <h1>Hujan</h1>
     </header>
 
     <div class="container">
         <nav>
             <h2>Navigation</h2>
             <ul>
-                <li>Link 1</li>
+                <li>hujan/hu·jan/ n 1 titik-titik air yang berjatuhan dari udara karena proses pendinginan; </li>
                 <li>Link 2</li>
                 <li>Link 3</li>
             </ul>
