--- a/floryn.html
+++ b/floryn.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML - CSS</title>
-
+<style>
+    p.groove {border-style: groove;}
+</style>
 </head>
 <body>
-    <h1>STRUKTUR HTML & CSS</h1>
+    <h1>STUKTUR HTML & CSS</h1>
     <header>
         <h1>Hujan</h1>
     </header>
@@ -16,7 +18,7 @@
         <nav>
             <h2>Navigation</h2>
             <ul>
-                <li>hujan/hu·jan/ n 1 titik-titik air yang berjatuhan dari udara karena proses pendinginan; </li>
+                <li>Link 1</li>
                 <li>Link 2</li>
                 <li>Link 3</li>
             </ul>
@@ -25,11 +27,18 @@
         <main class="articles">
             <article>
                 <h2>Article 1</h2>
-                <p>Konten artikel pertama...</p>
+                <p>hujan/hu·jan/ n 1 titik-titik air yang berjatuhan dari udara karena proses pendinginan</p>
             </article>
             <article>
                 <h2>Article 2</h2>
-                <p>Konten artikel kedua...</p>
+                <p>sekuntum bunga melati lepas dari genggaman</p>
+                <p>dalam sunyinya malam ia bercerita</p>
+                <p>bersama hujan dia merasa tenang</p>
+                <p>seiring berjalannya waktu hujan tidak datang</p>
+                <p>samar ku lihat lambaian tangan</p>
+                <p>mengulang rindu penuh dengan kenangan</p>
+                <p>katanya, tolong katakan pada hujan</p>
+                <p>dia disini membendung rindu sendirian</p>
             </article>
             <article>
                 <h2>Article 3</h2>
