--- a/floryn.html
+++ b/floryn.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML - CSS</title>
 <style>
-    p.groove {border-style: groove;}
+    header, nav, article, footer {
+        padding: 20px;
+        border: 3px rgb(194, 154, 194)
+        border-radius: 5px
 </style>
 </head>
 <body>
