--- a/floryn.html
+++ b/floryn.html
@@ -7,8 +7,9 @@
 <style>
     header, nav, article, footer {
         padding: 20px;
-        border: 3px rgb(194, 154, 194)
-        border-radius: 5px
+        border: 3px solid plum
+        margin
+    }
 </style>
 </head>
 <body>
