--- a/floryn.html
+++ b/floryn.html
@@ -7,8 +7,9 @@
 <style>
     header, nav, article, footer {
         padding: 20px;
-        border: 3px solid plum
-        margin
+        border: 3px solid rgb(192, 140, 192);
+        border-radius: 30px;
+        margin: 10px
     }
 </style>
 </head>
