--- a/floryn.html
+++ b/floryn.html
@@ -39,15 +39,22 @@
                 <p>sekuntum bunga melati lepas dari genggaman</p>
                 <p>dalam sunyinya malam ia bercerita</p>
                 <p>bersama hujan dia merasa tenang</p>
-                <p>seiring berjalannya waktu hujan tidak datang</p>
+                <p>seiring berjalannya waktu hujan tak pernah pulang
                 <p>samar ku lihat lambaian tangan</p>
                 <p>mengulang rindu penuh dengan kenangan</p>
                 <p>katanya, tolong katakan pada hujan</p>
-                <p>dia disini membendung rindu sendirian</p>
+                <p>ia disini membendung rindu sendirian</p>
+                <p>12 Agustus 2025</p>
             </article>
             <article>
                 <h2>Article 3</h2>
-                <p>Konten artikel ketiga...</p>
+                <p>hujan datang lagi</p>
+                <p>membawa pesan melewati sunyi</p>
+                <p>rintik rindu kini kembali</p>
+                <p>menyulam rindu yang tak terobati</p>
+                <P>ia bercerita dengan gembira</p>
+                <p>dengan senyuman yang selalu bahagia</p>
+                <p>meski hujan tak pernah memberi jawaban</p>
             </article>
         </main>
     </div>
