--- a/floryn.html
+++ b/floryn.html
@@ -55,6 +55,7 @@
                 <P>ia bercerita dengan gembira</p>
                 <p>dengan senyuman yang selalu bahagia</p>
                 <p>meski hujan tak pernah memberi jawaban</p>
+                <p>20 Agustus 2025</p>
             </article>
         </main>
     </div>
