--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ haloooooooo! ini web pertama lia!
 <body>
 
 <h1>To My Dear, Historia</h1>
-<p>Love, My Jaemin.</p>
+<p>With Love, Li.</p>
 
 </body>
 </html>
