--- a/floryn.html
+++ b/floryn.html
@@ -50,11 +50,12 @@
                 <h2>Article 3</h2>
                 <p>hujan datang lagi</p>
                 <p>membawa pesan melewati sunyi</p>
-                <p>rintik rindu kini kembali</p>
-                <p>menyulam rindu yang tak terobati</p>
+                <p>rintik kini kembali</p>
+                <p>menyulam asa yang tak terobati</p>
                 <P>ia bercerita dengan gembira</p>
-                <p>dengan senyuman yang selalu bahagia</p>
-                <p>meski hujan tak pernah memberi jawaban</p>
+                <p>meski hatinya kerap bertanya</p>
+                <p>padahal hujan telah lama bungkam</p>
+                <p>tekadnya tak pernah tenggelam</p>
                 <p>20 Agustus 2025</p>
             </article>
         </main>
