--- a/floryn.html
+++ b/floryn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML - CSS</title>
+    <title>floryn's</title></title>
 <style>
     header, nav, article, footer {
         padding: 20px;
@@ -14,18 +14,18 @@
 </style>
 </head>
 <body>
-    <h1>STUKTUR HTML & CSS</h1>
+    <h1>HTML - CSS</h1>
     <header>
         <h1>Hujan</h1>
     </header>
 
     <div class="container">
         <nav>
-            <h2>Navigation</h2>
+            <h2>Table</h2>
             <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
+                <li>I. A1</li>
+                <li>II. A2</li>
+                <li>III. A3</li>
             </ul>
         </nav>
 
@@ -62,7 +62,7 @@
     </div>
 
     <footer>
-        <p>Footer</p>
+        <p>Love, Penulis</p>
     </footer>
 </body>
 
