--- a/floryn.html
+++ b/floryn.html
@@ -38,12 +38,12 @@
                 <h2>Article 2</h2>
                 <p>sekuntum bunga melati lepas dari genggaman</p>
                 <p>dalam sunyinya malam ia bercerita</p>
-                <p>bersama hujan dia merasa tenang</p>
-                <p>seiring berjalannya waktu hujan tak pernah pulang
+                <p>bersama hujan ia merasa tenang</p>
+                <p>seiring berjalannya waktu hujan tak pernah datang
                 <p>samar ku lihat lambaian tangan</p>
-                <p>mengulang rindu penuh dengan kenangan</p>
-                <p>katanya, tolong katakan pada hujan</p>
-                <p>ia disini membendung rindu sendirian</p>
+                <p>mengulang asa penuh kenangan</p>
+                <p>tolong katakan pada hujan</p>
+                <p>ia disini sendirian</p>
                 <p>12 Agustus 2025</p>
             </article>
             <article>
@@ -62,7 +62,7 @@
     </div>
 
     <footer>
-        <p>Love, Penulis</p>
+        <p>With Love, Penulis</p>
     </footer>
 </body>
 
