--- a/floryn.html
+++ b/floryn.html
@@ -14,7 +14,7 @@
 </style>
 </head>
 <body>
-    <h1>HTML - CSS</h1>
+    <h1>HTML AND CSS</h1>
     <header>
         <h1>Hujan</h1>
     </header>
